--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </table>
       <br>
 
-      <div class="panel panel-success">
+      <div class="panel panel-default" id="panelTable">
         <div class="panel-heading">Bit Decoded</div>
       <!-- Table -->
         <table class="table">
