--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="container">
       <header>
         <br><br><br>
+        <div id="alert-place"></div>
         <div class="col-lg-12">
           <div class="input-group">
             <input type="text" class="form-control" id="isoMessage" placeholder="Paste a ISO-8583 Message here and press Go!">
